# django-template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.env  sample.env.proxy-companion
.github/workflows/: linter.yml
api/: serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20201105_0717.py
backend/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
nginx/vhost.d/: default
template/: asgi.py  settings.py
template/api/: models.py  views.py
template/api/migrations/: 0001_initial.py
template/template/: settings.py  urls.py  wsgi.py
